@@ -72,6 +72,7 @@ MovieJukebox 1.0.17 beta
   - Fixed defect #764 Fixed typo in default moviejukebox.properties file
   - Enhancement  #795 Subtitles download feature for Sratim plugin
   - Enhancement  #796 Update to the Hebrew skin
+  - Fixed defect #820 Proper handling of TV shows by Kinopoisk plugin
 
 MovieJukebox 1.0.16 beta
 ------------------------
